--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-logical-padding",
-  "version": "1.0.0-3",
+  "version": "1.0.0",
   "description": "Enforces padding between logical blocks of code",
   "main": "index.js",
   "license": "MIT",
